styling update for fixing details on mobile

--- a/gamesPlatform/Client/GamePages/SnakeGame.razor.css
+++ b/gamesPlatform/Client/GamePages/SnakeGame.razor.css
@@ -14,7 +14,6 @@
 #main-content {
     overflow: hidden;
     height: 100%;
-    background-color: #fffefe;
     z-index: 1;
 }
 
